fix: removed scrollbar styling to allow more flexibility for developers

--- a/src/app.css
+++ b/src/app.css
@@ -64,3 +64,24 @@ body {
 	text-overflow: clip !important;
 	white-space: normal !important;
 }
+
+::-webkit-scrollbar {
+	max-width: 0.5rem;
+}
+::-webkit-scrollbar:horizontal {
+	height: 0.5rem;
+	max-height: 0.5rem;
+}
+::-webkit-scrollbar-track {
+	background-color: rgba(25, 25, 25, 0.05);
+}
+[data-theme='dark'] ::-webkit-scrollbar-track {
+	background-color: rgba(89, 90, 92, 0.15);
+}
+::-webkit-scrollbar-thumb {
+	border-radius: 9999px;
+	background-color: rgba(5, 5, 5, 0.15);
+}
+[data-theme='dark'] ::-webkit-scrollbar-thumb {
+	background-color: rgba(250, 250, 250, 0.15);
+}
